--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -1,7 +1,6 @@
 {
   "name": "notes-app",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,7 @@
     "chalk": "^2.4.1",
     "validator": "^13.7.0",
     "yargs": "^17.3.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
