--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -10,6 +10,7 @@
   "author": "Taewoo",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
   },
